2008-03-03  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install)
	(elisp-site-regen, elisp-emacs-version): Clean up temporary files.

	* elisp.eclass (EXPORT_FUNCTIONS): Call only once, according to
	section 7.3 of the PMS draft.

2008-02-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Don't output warning if
	site-gentoo.el file is unchanged.

2007-12-17  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Note new installation
	directory in the output intended for the user and refer to
	emacs-updater

2007-12-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Redirect input of cat
	command to /dev/null, otherwise it will hang if the list of files
	is empty. Thanks to Sebastien Fabbro <bicatali@gentoo.org> for
	pointing this out.

2007-12-11  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Don't require -gentoo
	extension for files in site-gentoo.d.
	(elisp-site-file-install): Assign only base name to sf variable.

2007-12-07  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (S, elisp_pkg_setup): Moved back to global scope.
	(elisp_src_unpack): Do not change dir, we are in WORKDIR already.

2007-12-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (S, elisp_pkg_setup): Move handling of SIMPLE_ELISP
	into pkg_setup function, otherwise it fails with portage-2.1.4.
	(elisp_src_unpack): Die if mv fails.

2007-12-01  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Redo change
	of 2007-11-24 which was undone at 2007-11-29.
	(elisp-site-regen): Kludge for backwards compatibility.

2007-11-30  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Set nullglob option,
	because there may be a directory without matching files.
	(elisp-compile, elisp-comp, elisp-make-autoload-file)
	(elisp-install, elisp-site-file-install): Use ebegin/eend.
